src/z80asm/z80asm2/t/20-preproc/expected/defgroup_02.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defgroup_02.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/defgroup_02.asm...
t/20-preproc/input/defgroup_02.asm:2:1: error: Missing '{' in DEFGROUP directive
    hello
    ^
# file: t/20-preproc/input/defgroup_02.asm
EndOfLine	"\n"	3:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
